# synth-proxy_audio-model-selection

./: .gitignore  README.md  TAL_NoiseMaker_check.ipynb  colab_notebook.ipynb  preset_embedding_audio_model_selection.ipynb  pyproject.toml  requirements.txt
configs/: evaluate.yaml  evaluate_audio_model.yaml  evaluate_embeddings.yaml
configs/data/: nsynth.yaml
configs/debug/: default.yaml  with_logger.yaml
configs/distance_fn/: cos.yaml  l2.yaml  pairwise_manhattan_distance.yaml
configs/eval/: default.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/metrics/: absolute_pairwise_dists.yaml  relative_pairwise_dists.yaml
configs/model/: audiomae_as-2M_pt+ft.yaml  audiomae_as-2M_pt+ft_ctx7.yaml  audiomae_as-2M_pt+ft_ctx7_class-token.yaml  audiomae_as-2M_pt+ft_ctx8.yaml  audiomae_as-2M_pt+ft_ctx8_class-token.yaml  audiomae_as-2M_pt+ft_ctx9.yaml  audiomae_as-2M_pt+ft_ctx9_class-token.yaml  audiomae_as-2M_pt+ft_no-ctx.yaml  audiomae_as-2M_pt+ft_no-ctx_class-token.yaml  m2l.yaml  (+51 more)
data/: tal_noisemaker_presets.json
notebooks/: colab_notebook.ipynb
notebooks_colab/: TAL_NoiseMaker_eval.ipynb  TAL_NoiseMaker_render_sound_attributes_ranking_dataset.ipynb  preset_embedding_audio_model_selection.ipynb  render_sound_attributes_ranking_noisemaker_dataset.ipynb
notebooks_colabs/: TAL_NoiseMaker_render_sound_attributes_ranking_dataset.ipynb
src/: cfg_debug.py  check_cfg.py  eval.py  evaluate.py  evaluate_audio_model.py  evaluate_embeddings.py
tests/: test_convert_audio.py  test_global_argsort.py  test_nearest_neighbors.py
wandb/: latest-run
(+147 files in other folders)
