[tool.poetry]
name = "audio-model-selection"
version = "0.1.0"
description = ""
authors = ["Paolo Combes <paolocombes@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

torch = { version = "^2.0.1", source="torch" }
torchvision = { version = "^0.15.1", source="torch" }
torchaudio = { version = "^2.0.1", source="torch" }

soundfile = "^0.12.1"
wandb = "^0.15.0"
hydra-core = "^1.3.2"
rich = "^13.3.5"
fastapi = ">=0.80"
hydra-colorlog = "^1.2.0"

python-dotenv = "^1.0.0"
pytest = "^7.3.2"
torchsynth = "^1.0.2"
einops = "^0.6.1"
wand = "^0.6.11"
lightning = "^2.0.3"
tqdm = "^4.65.0"
torchinfo = "^1.8.0"
torchmetrics = "^0.11.4"
pandas = "^2.0.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]] 
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
